# powerkeyd

./: README.md  meson.build  meson_options.txt
scripts/: displayctl  lockctl
src/: meson.build  powerkeyd.c
systemd/: os-dim.service  os-dim.timer  os-lock.service  os-lock.timer  os-screenoff.service  os-screenoff.timer  os-wake.service  os-wlogout.service  powerkeyd.service
