option(
  'default_match',
  type: 'string',
  value: 'gpio_keys',
  description: 'Substring to match input device name',
)

option(
  'grab_device',
  type: 'boolean',
  value: true,
  description: 'Attempt EVIOCGRAB on the input device',
)

option('systemd_system_unit_dir',
  type: 'string',
  value: '',
  description: 'Override systemd system unit dir (empty = query systemd via pkg-config)'
)